--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 .idea
 .vscode
 
+# Documentation #
+# ############# #
+
+docs/_build/**
+
 # Project Egg Info #
 # ################ #
 eFFORT.egg-info
